--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -7,11 +7,7 @@
   <p>Группа тайных поклонников графа.</p>
   <article>
     {% for post in posts %}
-      <ul>
-        <li>Автор: {{ post.author.get_full_name }}</li>
-        <li>Дата публикации: {{ post.pub_date|date:"d E Y" }}</li>
-      </ul>
-      <p>{{ post.text }}</p>
+      {% include 'includes/post.html' %}
       {% if not forloop.last %}<hr>{% endif %}
     {% endfor %}
   </article>
